--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot==8.0
-requests==2.18.4
-websocket-client==0.44.0
-requests-futures==0.9.7
+python-telegram-bot
+requests
+websocket-client
+requests-futures
+fuzzywuzzy[speedup]
